# Numerical-computationandalgorithms

./: CMakeLists.txt  a.py  draw.py  out.txt  random_set2.txt
BigHomeWork/: Hausdorff2.c  Hausdorff3.c  HausdorffDistance.c  draw.c  in.txt  nodeAdd.py  out.txt  random_set1.txt
第一周/: 浮点数交换律测试.cpp  浮点数结合律测试.cpp
第三周/: 牛顿下山法求解点到椭圆的最小值问题.c  牛顿下山法求解点到椭圆的最小值问题.cpp
第九次作业/: main.py
第二周/: 一元二次方程求解.cpp  示例代码.cpp
第五周/: 雅可比迭代法求解高阶稀疏矩阵.c  高斯消去法求解高阶稀疏矩阵.c
第八次作业/: main.py
第十次作业/: 基于复化辛卜生公式的变步长求积算法.c
第四周/: 高斯消去法求解线性方程.c  高斯消去法求解线性方程.cpp
